add swagger file and product response model
